...
    <string name="choose_type">Choose Type</string>
    <string name="clear">Clear</string>
    <string name="clear_all_saved_passwords">Clear all saved passwords</string>
    <string name="clear_clipboard_on_close">Clear clipboard on close</string>
    <string name="clear_password_notifications">Clear password notifications</string>
    <string name="clear_recent">Clear Recent</string>
    <string name="close_file">Close File</string>
    <string name="close_file_screen_off">Close file on screen off</string>
    <string name="confirm">Confirm</string>
    <string name="cannot_delete_record">Cannot delete record - %1$s</string>
    <string name="content_file">Content File</string>
    <string name="continue_str">Continue</string>
    <string name="continue_p">Continue?</string>
...
    <string name="expired_password_notification">Expired password notification</string>
    <string name="expiring_password">Expiring password</string>
    <string name="ext_storage_not_mounted">External storage not mounted.  Please mount the storage to view files.</string>
    <string name="file_backups">File backups</string>
    <string name="file_close_timeout">File close timeout</string>
    <string name="file_exists">File exists</string>
    <string name="file">File</string>
    <string name="file_name">File Name</string>
    <string name="file_not_found_perm_denied">File not found or permission denied</string>
    <string name="file_open_help">
        File passwords can be saved on devices with a fingerprint scanner and
        Android 6.0 or higher.  The passwords are encrypted using AES-256
        keys that are protected by a fingerprint scan.
...
        doesn\'t respond with a rising tone, try moving the key around.  A bit
        of trial-and-error is needed to find the correct location.  The button
        on the YubiKey itself does not need to be pressed.\n
        - Once the key is found, it will be used to authenticate with your
        password.  The file will open automatically.
    </string>
    <string name="file_operations">File Operations…</string>
    <string name="file_password_encoding">File password encoding</string>
    <string name="files">Files</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized</string>
    <string name="generate">Generate</string>
    <string name="generate_password">Generate Password</string>
    <string name="go">Go</string>
...
    <string name="no_records">No Records</string>
    <string name="no_records_open_file">No Records. Open a file first and then retry.</string>
    <string name="none_paren">(None)</string>
    <string name="none_selected_open">None selected.  Open PasswdSafe to choose.</string>
    <string name="notes">Notes</string>
    <string name="num_records">Number of records</string>
    <string name="ok">OK</string>
    <string name="open_file">Open %s</string>
    <string name="open_file_title">Open File</string>
    <string name="option_not_selected">At least one option must be selected</string>
    <string name="password">Password</string>
    <string name="password_encoding">Password encoding</string>
    <string name="password_expiration">Password Expiration</string>
    <string name="password_expiration_in_past">Password expiration is in the past</string>
    <string name="password_expiration_invalid_interval">Interval must be in the range 1&#8211;3650</string>
    <string name="password_expired">Password expired</string>
    <string name="password_expires_before">Password expires before %1$s</string>
...
    <string name="protected_record">Protected</string>
    <string name="protected_record_header">PROTECTED RECORD</string>
    <string name="psafe3_ext">.psafe3</string>
    <string name="query_label">Search: %1$s</string>
    <string name="recent_files">Recent Files</string>
    <string name="record">Record</string>
    <string name="records">Records</string>
    <string name="record_has_references">Record has references</string>
    <string name="record_not_found">Record not found</string>
    <string name="record_policy">Record Policy</string>
    <string name="record_sort_order">Record sort order</string>
    <string name="record_type">Record type</string>
    <string name="read_only_about">Read-only</string>
...
