<!--
  ~ Copyright (©) 2015 Jeff Harris <jefftharris@gmail.com>
  ~ All rights reserved. Use of the code is allowed under the
  ~ Artistic License 2.0 terms, as specified in the LICENSE file
  ~ distributed with this code, or available from
  ~ http://www.opensource.org/licenses/artistic-license-2.0.php
  -->

<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uci.tjado.passwdsafe.FileListActivity">

    <LinearLayout android:id="@+id/content"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin">

        <FrameLayout android:id="@+id/files"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     tools:layout="@layout/fragment_file_list"/>

        <LinearLayout android:id="@+id/no_permission_group"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/no_file_permission"/>

            <Button android:id="@+id/reload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reload"/>

            <Button android:id="@+id/app_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_settings"/>

        </LinearLayout>

    </LinearLayout>

    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment android:id="@+id/navigation_drawer"
              android:name="uci.tjado.passwdsafe.FileListNavDrawerFragment"
              android:layout_width="@dimen/navigation_drawer_width"
              android:layout_height="match_parent"
              android:layout_gravity="left|start"
              tools:layout="@layout/fragment_file_list_nav_drawer"
              tools:ignore="RtlHardcoded"/>

</androidx.drawerlayout.widget.DrawerLayout>

